Bug 87281 - Crash on importing diagram in .docx file
Summary: Crash on importing diagram in .docx file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Gary Houston
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-13 11:44 UTC by Gary Houston
Modified: 2015-04-29 15:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
diff for changes in diagramdefinitioncontext.cxx (593 bytes, text/plain)
2014-12-13 11:44 UTC, Gary Houston
Details
Document with a faulty diagram that crashes on import. (12.56 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-12-15 03:01 UTC, Gary Houston
Details
4.5 alpha assertion failed error (9.89 KB, image/png)
2014-12-15 06:38 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gary Houston 2014-12-13 11:44:45 UTC
Created attachment 110812 [details]
diff for changes in diagramdefinitioncontext.cxx

I have a docx file that crashes Writer when parsing a diagram. I was hacking the file to investigate a different problem, but still it shouldn't crash.

Crashing in ~DiagramDefinitionContext because mpLayout->getNode() is apparently NULL.

Proposed fix attached.
Comment 1 tommy27 2014-12-14 14:26:12 UTC
please upload a test file as well so we can try to reproduce the bug.
Comment 2 Gary Houston 2014-12-15 03:01:27 UTC
Created attachment 110837 [details]
Document with a faulty diagram that crashes on import.
Comment 3 tommy27 2014-12-15 06:38:09 UTC
Created attachment 110844 [details]
4.5 alpha assertion failed error

tested under Win8.1 64bit

I see this error message loading the file with 4.5.0.0.alpha0+
Build ID: 170616e9f2d30c1302bbb5a7a4b588bc05cd5cc9
TinderBox: Win-x86@39, Branch:master, Time: 2014-12-12_01:58:46
Locale: it_IT

if I click retry LO crashes
if I click ignore LO load an empty file

maybe it's due to the fact that TinderBox: Win-x86@39 is a debug build.

same .docx opens as an empty page in LibO 4.3.4.1 but with no error message.
Comment 4 tommy27 2014-12-15 06:40:18 UTC
(In reply to Gary Houston from comment #0)
> ....
> 
> Proposed fix attached.

If you aim to submit a patch yourself for this bug you need to keep in touch with the developers team. see instructions here:
https://wiki.documentfoundation.org/Development/gerrit/SubmitPatch
Comment 5 Commit Notification 2014-12-15 14:26:38 UTC
Gary Houston committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de41a2038ac44f71a9adef97e6ccea83c99dd1c2

Resolves: fdo#87281 Crash on importing diagram in .docx file

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-12-15 14:28:00 UTC
Gary Houston committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84ce458a841f9b09b87ff045403b546c88c79168&h=libreoffice-4-4

Resolves: fdo#87281 Crash on importing diagram in .docx file

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.